# pyqualw2

./: .gitignore  .gitmodules  .pre-commit-config.yaml  LICENSE.md  README.md  pyproject.toml  zensical.toml
.github/workflows/: docs.yml  lint.yml  tests.yml
docs/: reference.md
notebooks/: getting_started.ipynb
pyqualw2/: __init__.py  config.py  data.py  model_runner.py  outputs.py  utils.py
pyqualw2/cli/: preprocess.py
pyqualw2/config/: __init__.py  config.py  inputs.py  subconfig.py  util.py
src/: preprocess.py
test/: conftest.py  test_config.py  test_inputs.py  test_model_runner.py  test_outputs.py  test_utils.py
test/sample_data/test_model/: W2CodeCompilerVersion.opt  flowbal.csv  qwo_31.csv  qwo_layers_31_.csv  qwo_str1_seg31.csv  qwo_str2_seg31.csv  qwo_str3_seg31.csv  qwo_str4_seg31.csv  two_31.csv  two_str1_seg31.csv  two_str2_seg31.csv  two_str3_seg31.csv  two_str4_seg31.csv  w2.wrn  wl.csv
test/sample_data/test_model/Validation/: qwo_str1_seg31.csv  qwo_str2_seg31.csv  qwo_str3_seg31.csv  qwo_str4_seg31.csv  two_str1_seg31.csv  two_str2_seg31.csv  two_str3_seg31.csv  two_str4_seg31.csv
test/sample_data/test_model/inputs/: mbth_wb1.csv  mbth_wb1.npt  millerton.npt  millerton.w2l  mmet3.npt  mqdt_br1.npt  mqin_br1.npt  mqin_br2.npt  mqin_br3.npt  mqin_br4.csv  mqin_br4.npt  mqot_br1.npt  mqtr_tr1.npt  msnp_1.opt  mtdt_br1.npt  mtin_br1.npt  mtin_br4.csv  prf_1.opt
test/sample_data/test_model/inputs/temp_data/: SJA_2018_temp.csv  SJA_2022_temp.csv  SJA_2023_temp.csv  SJA_2024_temp.csv
test/sample_data/test_model/outputs/: millerton.w2l  tsr_1_seg31.csv  two_str2_seg31.csv  two_str3_seg31.csv  two_str4_seg31.csv
test/sample_data1/: w2_con.csv
test/sample_data1/historic_data/flow_data/: 2018_Observed_Flow.csv  2022_Observed_Flow.csv  2023_Observed_Flow.csv  2024_Observed_Flow.csv
test/sample_data1/historic_data/temp_data/: SJA_2024_temp.csv
test/sample_data1/inputs/: mmet3.csv  mqdt_br1.csv  mqin_br1.csv  mqin_br3.csv  mqot_br1.csv  mshade.npt  mtdt_br1.npt  mwsc.npt
test/sample_data1/outputs/: qwo_31.csv  qwo_layers_31_.csv  qwo_str1_seg31.csv  qwo_str2_seg31.csv  qwo_str3_seg31.csv  qwo_str4_seg31.csv  two_31.csv  two_str1_seg31.csv
test/sample_multi_run/test_name_4d53819f-3dbe-4ced-b4b2-6b46c850085f/outputs/: qwo_31.csv  qwo_layers_31_.csv  two_31.csv
test/sample_multi_run/test_name_7b1588db-94f6-4dc8-adb8-5295994004d2/outputs/: qwo_31.csv  qwo_layers_31_.csv  two_31.csv
test/sample_multi_run/test_name_a7fdc8fc-4132-49d9-98d8-cd4366034e7e/outputs/: qwo_31.csv  qwo_layers_31_.csv  two_31.csv
