[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "pyqualw2"
description = "A CE-QUAL-W2 orchestration toolkit"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "typer>=0.20",
    "pandas",
    "rich",
    "tomli>=2.3.0,<3",
    "matplotlib>=3.10.8",
    "scipy>=1.17.1",
]
dynamic = ["version"]

[project.optional-dependencies]
dev = [
    "prek",
    "ruff",
    "python-lsp-server",
]
test = [
    "pytest",
    "pytest-cov",
]
notebook = [
    "jupyterlab>=4.5.6",
    "ipympl>=0.10.0",
]

[tool.pytest]
log_cli = true
log_cli_level = "INFO"

[workspace]
authors = [
    {name = "bobo-baggins", email="urbanecoguard@gmail.com"},
    {name = "Peyton Murray", email="peynmurray@gmail.com"},
]
channels = ["conda-forge"]
name = "pyqualw2"
platforms = ["linux-64", "win-64"]
version = "0.1.0"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.wheel]
packages = ["pyqualw2"]

[tool.hatch.build.targets.wheel.force-include]
"cequalw2/w2_v45_64.exe" = "cequalw2/w2_v45_64.exe"

[tool.pixi.workspace]
name = "pyqualw2"
channels = ["conda-forge"]
platforms = ["linux-64", "win-64"]

[tool.pixi.pypi-dependencies]
pyqualw2 = { path = ".", editable = true }

[tool.pixi.feature.dev.tasks]
install-lint = { cmd = ["prek install"]}
lint = { cmd = ["prek run --all-files"]}

[tool.pixi.feature.notebook.tasks]
notebook = { cmd = ["jupyter", "lab"], description = "Launch a jupyter notebook environment" }

[tool.pixi.environments]
notebook = { features = ["notebook"] }
all = { features = ["notebook", "dev", "test"] }

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = [
    "ANN", # annotations
    "ARG", # flake8-unused-arguments
    "B", # flake8-bugbear
    "D", # pydocstyle
    "E", # pycodestyle
    "ERA", # flake8-eradicate
    "F", # Pyflakes
    "FIX", # flake8-fixme
    "I", # isort
    "N", # pep8 naming
    "NPY", # numpy-specific rules
    "PD", # pandas-vet
    "PT", # flake8-pytest
    "RET", # flake8-return
    "SIM", # flake8-simplify
    "T10", # debugger
    "T20", # flake8-print
    "UP", # pyupgrade
    "W", # pycodestyle
]
ignore = [
    "ANN002", # Missing type annotation for `*args`
    "ANN003", # Missing type annotation for `**kwargs`
    "ANN204", # Missing return type annotation for special method
    "D100", # Missing docstring in public module
    "D104", # Missing docstring in public package
    "D105", # Missing docstring in magic method
    "D107", # Missing docstring in __init__
    "D203", # 1 blank line before after class docstring
    "D213", # Multiline summary second line
    "D413", # 1 black line after parameters
    "N803", # Argument name should be lowercase. We use it everywhere here
    "N806", # Variable name should be lowercase; uppercase indicates constants
    "RET505", # Unnecessary elif after return statement; not always clearer
    "SIM108", # Simplify if/else to one line; not always clearer
    "SIM114", # Combine `if` branches using logical `or` operator; not always clearer
    "SIM300", # Yoda condition `a < var`; clearer in `a < var and var < b`
    "UP032", # Use f-string instead of `format` call; not always clearer
]

[tool.ruff.lint.pydocstyle]
convention = 'numpy'

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"test/*.py" = [
    "ANN001",
    "N802",  # Function name should be lowercase
    "DOC201", # Return not documented in docstring
]
"pyqualw2/config/subconfig.py" = [
    "D101",
    "D102",
]

[tool.isort]
profile = "black"

[tool.ruff.lint.flake8-annotations]
suppress-none-returning = true
